[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mth5_test_data"
version = "0.0.1"
description = "A place to keep data samples used in testing mth5 to avoid bloat during development"
readme = "README.rst"
authors = [
    {name = "MTH5 Team", email = "jpeacock@usgs.gov"}
]
maintainers = [
    {name = "MTH5 Team", email = "jpeacock@usgs.gov"}
]
license = {text = "MIT"}
keywords = ["mth5", "data", "examples"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/kujaku11/mth5_test_data"
Repository = "https://github.com/kujaku11/mth5_test_data"
"Bug Tracker" = "https://github.com/kujaku11/mth5_test_data/issues"

[tool.setuptools.packages.find]
include = ["mth5_test_data*"]

[tool.setuptools.package-data]
"mth5_test_data" = [
    # XML metadata files
    "florida_xml_metadata_files/*.xml",
    "metadata_files/*.xml",
    "iris/**/*.xml",
    "stationxml/*.xml",
    # Zip archives ONLY - do not include their extracted contents
    "metronix/*.zip",
    "miniseed/*.zip",
    "nims/*.zip",
    "phoenix/*.zip",
    "zen/*.zip",
    "usgs_ascii/*.zip",
    # Standalone data files (not in zip archives)
    "mth5/**/*.h5", 
    "mth5/**/*.hdf5",
    "mth5/**/*.json",
    "calibration_files/**/*.txt",
    "calibration_files/**/*.json",
    "calibration_files/**/*.csv",
    # Standalone nims binary files (not in zip)
    "nims/*.BIN",
]

# Include root-level files from MANIFEST.in
[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.data-files]
"." = ["HISTORY.rst", "LICENSE", "README.rst"]

[tool.setuptools.dynamic]
# Can be used if you want to read version from a file or git tags
# version = {attr = "mth5_test_data.__version__"}

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8"
]

# Entry points if needed for command-line tools
# [project.scripts]
# mth5-test-data = "mth5_test_data.cli:main"